feat: add ERC20 deploy worker, update healthcheck manual fallback
* ERC20 deployments work with manual ownership transfer fallback, deployments are still instant
